[package]
name = "drv2605-async"
version = "0.1.1"
authors = ["Wez Furlong", "Chris Maniewski"]
edition = "2021"
keywords = ["embedded-hal-driver"]
categories = ["embedded", "no-std", "hardware-support", "haptic"]
description = "An async rust-embedded driver for the Texas Instruments DRV2605 haptic driver"
license = "MIT OR Apache-2.0"
readme = "README.md"
repository = "https://github.com/AtovProject/drv2605-async"

[dependencies]
embedded-hal-async = "1.0"
bitfield = "0.15"
